Fix: the main layout for footer slogan was overlapping

--- a/public/styles/site/_main-layout.scss
+++ b/public/styles/site/_main-layout.scss
@@ -124,6 +124,10 @@ p
   }
   p {
     line-height: 1rem;
+    @media screen and (max-width: 600px;) {
+      line-height: normal;
+    }
+
     padding-top: 2px;
     &.text-white {
       color: #fff !important;
